--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
+
+
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/ fb# prefix属性: http://ogp.me/ns/ prefix属性#">
+    <meta property="og:url" content="https://choko1229.github.io/goodluck-student/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="がんばれ受験生！！" />
+    <meta property="og:description" content="2024年のセンター入試までの時間をカウントダウンします。" />
+    <meta property="og:site_name" content="なっさん応援隊" />
+    <meta property="og:image" content="https://choko1229.github.io/goodluck-student/css/img/op.png" />
+    <meta name="twitter:card" content="Summary with Large Image" />
+    <meta name="twitter:site" content="@choko1229da" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>がんばれ！なっさん！</title>
@@ -8,30 +18,36 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-X84SBGMSQZ"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'G-X84SBGMSQZ');
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-X84SBGMSQZ');
     </script>
 </head>
+
 <body>
     <div class="centered-text">
-    <h1>がんばれ受験生！！</h1>
-    <div id="countdownArea" class="countdown">
-        <h2><span id="countdown-day">0</span>日
-        <span id="countdown-hour">0</span>時間
-        <span id="countdown-min">0</span>分
-        <span id="countdown-sec">0</span>秒</h2>
-        <h1><div id="countdown-message"></div></h1>
-        <h4>令和6年度 大学入学共通テスト（新テスト）</h4>
-        <h4>開始時刻 2024年1月13日（土）午前9時30分</h4>
+        <h1>がんばれ受験生！！</h1>
+        <div id="countdownArea" class="countdown">
+            <h2><span id="countdown-day">0</span>日
+                <span id="countdown-hour">0</span>時間
+                <span id="countdown-min">0</span>分
+                <span id="countdown-sec">0</span>秒
+            </h2>
+            <h1>
+                <div id="countdown-message"></div>
+            </h1>
+            <h4>令和6年度 大学入学共通テスト（新テスト）</h4>
+            <h4>開始時刻 2024年1月13日（土）午前9時30分</h4>
+        </div>
     </div>
-</div>
-<footer>
-    <p>kudakenくんからページを借りました。<a href="https://github.com/kudaken0/countdown">github</a></p>
-</footer>
+    <footer>
+        <p>kudakenくんからページを借りました。<a href="https://github.com/kudaken0/countdown">github</a></p>
+    </footer>
     <script src="js/script.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.3.2/dist/confetti.browser.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.3.2/dist/confetti.browser.min.js"></script>
 </body>
+
 </html>
