--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </div>
     <footer>
-        <p>kudakenくんからページを借りました。<a href="https://github.com/kudaken0/countdown">github</a></p>
+        <p>kudakenくんからページを借りました。<a href="https://github.com/choko1229/goodluck-student">github</a></p>
     </footer>
     <script src="js/script.js"></script>
     <script type="text/javascript"
