OGの設定の修正

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:description" content="2024年のセンター入試までの時間をカウントダウンします。" />
     <meta property="og:site_name" content="なっさん応援隊" />
     <meta property="og:image" content="https://choko1229.github.io/goodluck-student/css/img/og.png" />
-    <meta name="twitter:card" content="Summary with Large Image" />
+    <meta name="twitter:card" content="Summary_with_Large_Image" />
     <meta name="twitter:site" content="@choko1229da" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
